--- a/.github/ISSUE_TEMPLATE/bug2.yml
+++ b/.github/ISSUE_TEMPLATE/bug2.yml
@@ -1,5 +1,5 @@
 name: "综合 Bug 反馈/Other bug feedback"
-description: "遇见了没有细分选项的其他 Bug\nDiscovered other bugs that were not specifically categorized"
+description: "遇见了没有细分选项的其他 Bug/Discovered other bugs that were not specifically categorized"
 labels: [问题/Bug, 新反馈/new issue]
 body:
 - type: checkboxes
